--- a/stages/ci.yml
+++ b/stages/ci.yml
@@ -18,7 +18,7 @@ stages:
           $(tag)
 
     
-    - bash: echo '##vso[task.setvariable variable=manifestName]voteap_$Build.BuildId_$dateStr.yml'
+    - bash: echo '##vso[task.setvariable variable=manifestName]$Build.BuildId'
       displayName: Set new variable value for the manifestName
 
     - task: CopyFiles@2
@@ -29,8 +29,8 @@ stages:
 
     - task: CmdLine@2
       inputs:
-        script: rename $(build.artifactstagingdirectory)\azure-vote-all-in-one-redis.yml
-          $(build.artifactstagingdirectory)\$(manifestName)
+        script: REN $(build.artifactstagingdirectory)\azure-vote-all-in-one-redis.yml
+          $(build.artifactstagingdirectory)\$(manifestName).yml
 
 
     - upload: $(manifestName)
