--- a/stages/ci.yml
+++ b/stages/ci.yml
@@ -18,7 +18,7 @@ stages:
           $(tag)
 
     
-    - bash: echo '##vso[task.setvariable variable=manifestName]voteap_$(tag)_$(Date:yyyyMMdd).yml'
+    - bash: echo '##vso[task.setvariable variable=manifestName]voteap_$(tag)_$(date).yml'
       displayName: Set new variable value for the manifestName
 
     - task: CopyFiles@2
