--- a/stages/ci.yml
+++ b/stages/ci.yml
@@ -18,14 +18,14 @@ stages:
           $(tag)
 
     
-    - bash: echo '##vso[task.setvariable variable=manifestName]voteap_$(tag)_$(date).yml'
+    - bash: echo '##vso[task.setvariable variable=manifestName]voteap_$(tag).yml'
       displayName: Set new variable value for the manifestName
 
-    - task: CopyFiles@2
-      displayName: 'Rename manifest'
-      inputs: 
-        contents: 'azure-vote-all-in-one-redis.yml'
-        TargetFolder: $(build.artifactstagingdirectory)\
+    # - task: CopyFiles@2
+    #   displayName: 'Rename manifest'
+    #   inputs: 
+    #     contents: 'azure-vote-all-in-one-redis.yml'
+    #     TargetFolder: $(build.artifactstagingdirectory)\
 
     # - task: CmdLine@2
     #   inputs:
