--- a/stages/ci.yml
+++ b/stages/ci.yml
@@ -21,16 +21,17 @@ stages:
     - bash: echo '##vso[task.setvariable variable=manifestName]voteap_$(tag).yml'
       displayName: Set new variable value for the manifestName
 
-    # - task: CopyFiles@2
-    #   displayName: 'Rename manifest'
-    #   inputs: 
-    #     contents: 'azure-vote-all-in-one-redis.yml'
-    #     TargetFolder: $(build.artifactstagingdirectory)\   
+    - task: CopyFiles@2
+      displayName: 'Copy manifest'
+      inputs: 
+        contents: 'azure-vote-all-in-one-redis.yml'
+        TargetFolder: $(build.artifactstagingdirectory)\  
+
     - task: PowerShell@2
       displayName: 'Copy Specific Config'
       inputs:
         targetType: inline
-        script: Copy-Item -Path "azure-vote-all-in-one-redis.yml" -Destination "$(build.artifactstagingdirectory)\$(manifestName)"
+        script: Copy-Item -Path "$(build.artifactstagingdirectory)\azure-vote-all-in-one-redis.yml" -Destination "$(build.artifactstagingdirectory)\$(manifestName)"
 
     - upload: $(build.artifactstagingdirectory)\$(manifestName)
       artifact: $(build.artifactstagingdirectory)\$(manifestName)
