--- a/variables.yml
+++ b/variables.yml
@@ -6,6 +6,7 @@ variables:
   containerRegistry: 'acraksmatteo.azurecr.io'
   dockerfilePath: '**/Dockerfile'
   tag: '$(Build.BuildId)'
+  manifestName: 'voteap_$(Build.BuildId).yml'
   imagePullSecret: 'acraksmatteof2a8-auth'
 
   # Agent VM image name
