--- a/stages/cd.yml
+++ b/stages/cd.yml
@@ -30,6 +30,6 @@ stages:
               imagePullSecrets: |
                 $(imagePullSecret)
               containers: |
-                $(containerRegistry)/$(imageRepository):$(tag)
+                $(containerRegistry)/$(imageRepository):/$(manifestName)
 
   
