--- a/stages/ci.yml
+++ b/stages/ci.yml
@@ -36,6 +36,12 @@ stages:
     - upload: $(build.artifactstagingdirectory)
       artifact: $(build.artifactstagingdirectory)
 
+    - task: CopyFiles@2
+      displayName: 'Copy manifest to pipeline'
+      inputs: 
+        contents: '$(build.artifactstagingdirectory)\$(manifestName)'
+        TargetFolder: $(Pipeline.Workspace)\  
+
     # - task: CmdLine@2
     #   inputs:
     #     script: ren $(build.artifactstagingdirectory)\azure-vote-all-in-one-redis.yml
