--- a/stages/cd.yml
+++ b/stages/cd.yml
@@ -26,7 +26,7 @@ stages:
             inputs:
               action: deploy
               manifests: |
-                $(Pipeline.Workspace)/$(build.artifactstagingdirectory)/$(manifestName)
+                /a/$(manifestName)
               imagePullSecrets: |
                 $(imagePullSecret)
               containers: |
