--- a/variables.yml
+++ b/variables.yml
@@ -6,7 +6,7 @@ variables:
   containerRegistry: 'acraksmatteo.azurecr.io'
   dockerfilePath: '**/Dockerfile'
   tag: '$(Build.BuildId)'
-  manifestdate: '$(Release.Deployment.StartTime)'
+  manifestdate: '$(pipeline.startTime)'
   manifestName: 'voteap_$(Build.BuildId)_$(manifestdate).yml'
   imagePullSecret: 'acraksmatteof2a8-auth'
 
