--- a/stages/ci.yml
+++ b/stages/ci.yml
@@ -8,7 +8,7 @@ stages:
       vmImage: $(vmImageName)
     steps:
     - task: Docker@2
-      displayName: Build and push an image to container registry
+      displayName: Build and push to container registry
       inputs:
         command: buildAndPush
         repository: $(imageRepository)
